--- a/.github/workflows/extract-img.yml
+++ b/.github/workflows/extract-img.yml
@@ -63,16 +63,16 @@ jobs:
           else
             link_gdrive=$(echo ${{ inputs.img_url }} | awk -F "/" '{print $4}' | awk -F "?id=" '{print $2}'|awk -F "&export" '{print $1}')
           fi
-          sudo gdown ${link_gdrive} -O openwrt/file.${{ inputs.type_file }}
+          gdown ${link_gdrive} -O openwrt/file.${{ inputs.type_file }}
         else
           if [ $(echo ${{ inputs.img_url }} | grep "mediafire.com") ]; then
-            sudo mediafire-dl ${{ inputs.img_url }} -o openwrt/file.${{ inputs.type_file }}
+            mediafire-dl ${{ inputs.img_url }} -o openwrt/file.${{ inputs.type_file }}
           else
             if [ $(echo ${{ inputs.img_url }} | grep "mega.nz") ]; then
               file_mega=$(sudo mega-get ${{ inputs.img_url }} | awk -F: '{print $2}')
-              sudo mv ${file_mega} openwrt/file.${{ inputs.type_file }}
+              mv ${file_mega} openwrt/file.${{ inputs.type_file }}
             else
-              sudo wget --no-check-certificate ${{ inputs.img_url }} -O openwrt/file.${{ inputs.type_file }}
+              wget --no-check-certificate ${{ inputs.img_url }} -O openwrt/file.${{ inputs.type_file }}
             fi
           fi
         fi
