--- a/.github/workflows/extract-img.yml
+++ b/.github/workflows/extract-img.yml
@@ -31,7 +31,7 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout
@@ -48,7 +48,8 @@ jobs:
         sudo -E apt-get -qq clean
         sudo pip3 install gdown
         sudo pip3 install git+https://github.com/Juvenal-Yescas/mediafire-dl
-        wget https://mega.nz/linux/repo/xUbuntu_20.04/amd64/megacmd-xUbuntu_20.04_amd64.deb && sudo apt install "$PWD/megacmd-xUbuntu_20.04_amd64.deb"
+        megacmd_ver=$(sudo cat /etc/*ease | grep "DISTRIB_RELEASE" | awk -F "=" '{print $2}')
+        wget https://mega.nz/linux/repo/xUbuntu_${megacmd_ver}/amd64/megacmd-xUbuntu_${megacmd_ver}_amd64.deb && sudo apt install "$PWD/megacmd-xUbuntu_${megacmd_ver}_amd64.deb"
         sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir/openwrt
         sudo chown $USER:$GROUPS /workdir
@@ -112,12 +113,20 @@ jobs:
         name: ${{ inputs.rename }}-rootfs.tar.gz
         path: /workdir/openwrt/img/${{ inputs.rename }}-rootfs.tar.gz
 
-    - name: Upload firmware to release
-      uses: softprops/action-gh-release@v1
-      if: env.PACKAGED_STATUS == 'success' && !cancelled()
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Delivering Package
+      uses: actions/upload-artifact@v4
+      if: env.PACKAGED_STATUS == 'success'
       with:
-        tag_name: ${{ env.PACKAGED_OUTPUTDATE }}
-        files: ${{ env.PACKAGED_OUTPUTPATH }}/*
+        name: openwrt_package
+        path: ${{ env.PACKAGED_OUTPUTPATH }}/*
+
+    - name: Upload release asset
+      uses: svenstaro/upload-release-action@v2
+      if: env.PACKAGED_STATUS == 'success'
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: ${{ env.PACKAGED_OUTPUTPATH }}/*
+        tag: ${{ env.PACKAGED_OUTPUTDATE }}
+        file_glob: true
+        overwrite: true
         body: boot & rootfs
