--- a/.github/workflows/extract-img.yml
+++ b/.github/workflows/extract-img.yml
@@ -86,10 +86,10 @@ jobs:
         los=$(sudo losetup -fP --show file.img)
         sudo mount ${los}p1 boot
         sudo mount ${los}p2 rootfs
-        (cd boot && tar cfz img/${{ inputs.rename }}-boot.tar.gz *)
-        (cd rootfs && tar cfz img/${{ inputs.rename }}-rootfs.tar.gz *)
+        (cd boot && tar cfz ../img/${{ inputs.rename }}-boot.tar.gz *)
+        (cd rootfs && tar cfz ../img/${{ inputs.rename }}-rootfs.tar.gz *)
         echo "PACKAGED_OUTPUTTAGS=${{ inputs.rename }}" >> ${GITHUB_ENV}
-        echo "PACKAGED_OUTPUTPATH=/workdir/openwrt/img" >> ${GITHUB_ENV}
+        echo "PACKAGED_OUTPUTPATH=./img" >> ${GITHUB_ENV}
         echo "PACKAGED_OUTPUTDATE=$(date +"%m.%d.%H%M")" >> ${GITHUB_ENV}
         echo "PACKAGED_STATUS=success" >> ${GITHUB_ENV}
 
@@ -98,14 +98,14 @@ jobs:
       if: env.PACKAGED_STATUS == 'success'
       with:
         name: ${{ inputs.rename }}-boot.tar.gz
-        path: img/${{ inputs.rename }}-boot.tar.gz
+        path: ./img/${{ inputs.rename }}-boot.tar.gz
 
     - name: Upload ${{ inputs.rename }}-rootfs.tar.gz
       uses: actions/upload-artifact@main
       if: env.PACKAGED_STATUS == 'success'
       with:
         name: ${{ inputs.rename }}-rootfs.tar.gz
-        path: img/${{ inputs.rename }}-rootfs.tar.gz
+        path: ./img/${{ inputs.rename }}-rootfs.tar.gz
 
     - name: Delivering Package
       uses: actions/upload-artifact@v4
