--- a/.github/workflows/extract-img.yml
+++ b/.github/workflows/extract-img.yml
@@ -89,7 +89,7 @@ jobs:
         (cd boot && sudo tar cfz ../img/${{ inputs.rename }}-boot.tar.gz *)
         (cd rootfs && sudo tar cfz ../img/${{ inputs.rename }}-rootfs.tar.gz *)
         echo "PACKAGED_OUTPUTTAGS=${{ inputs.rename }}" >> ${GITHUB_ENV}
-        echo "PACKAGED_OUTPUTPATH=./img" >> ${GITHUB_ENV}
+        echo "PACKAGED_OUTPUTPATH=./img/*" >> ${GITHUB_ENV}
         echo "PACKAGED_OUTPUTDATE=$(date +"%m.%d.%H%M")" >> ${GITHUB_ENV}
         echo "PACKAGED_STATUS=success" >> ${GITHUB_ENV}
 
@@ -107,19 +107,12 @@ jobs:
         name: ${{ inputs.rename }}-rootfs.tar.gz
         path: ./img/${{ inputs.rename }}-rootfs.tar.gz
 
-    - name: Delivering Package
-      uses: actions/upload-artifact@v4
-      if: env.PACKAGED_STATUS == 'success'
-      with:
-        name: openwrt_package
-        path: ${{ env.PACKAGED_OUTPUTPATH }}/*
-
     - name: Upload release asset
       uses: svenstaro/upload-release-action@v2
       if: env.PACKAGED_STATUS == 'success'
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: ${{ env.PACKAGED_OUTPUTPATH }}/*
+        file: ${{ env.PACKAGED_OUTPUTPATH }}
         tag: ${{ env.PACKAGED_OUTPUTDATE }}
         file_glob: true
         overwrite: true
