--- a/.github/workflows/extract-img.yml
+++ b/.github/workflows/extract-img.yml
@@ -62,16 +62,17 @@ jobs:
           else
             link_gdrive=$(echo ${{ inputs.img_url }} | awk -F "/" '{print $4}' | awk -F "?id=" '{print $2}'|awk -F "&export" '{print $1}')
           fi
-          sudo gdown ${link_gdrive} -O file.${{ inputs.type_file }}
+          gdown ${link_gdrive} -O file.${{ inputs.type_file }}
         else
           if [ $(echo ${{ inputs.img_url }} | grep "mediafire.com") ]; then
-            sudo mediafire ${{ inputs.img_url }} -o file.${{ inputs.type_file }}
+            mediafire ${{ inputs.img_url }}
+            mv *.${{ inputs.type_file }} file.${{ inputs.type_file }}
           else
             if [ $(echo ${{ inputs.img_url }} | grep "mega.nz") ]; then
-              file_mega=$(sudo mega-get ${{ inputs.img_url }} | awk -F: '{print $2}')
-              mv ${file_mega} file.${{ inputs.type_file }}
+              file_mega=$(mega-get ${{ inputs.img_url }} | awk -F: '{print $2}')
+              ${file_mega} file.${{ inputs.type_file }}
             else
-              sudo wget --no-check-certificate ${{ inputs.img_url }} -O file.${{ inputs.type_file }}
+              wget --no-check-certificate ${{ inputs.img_url }} -O file.${{ inputs.type_file }}
             fi
           fi
         fi
