--- a/.github/workflows/extract-img.yml
+++ b/.github/workflows/extract-img.yml
@@ -47,8 +47,8 @@ jobs:
         sudo -E apt-get -y install wget python3
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
-        sudo pip3 install gdown
-        sudo pip3 install git+https://github.com/NicKoehler/mediafire_bulk_downloader.git
+        pip3 install gdown
+        pip3 install git+https://github.com/NicKoehler/mediafire_bulk_downloader.git
         megacmd_ver=$(sudo cat /etc/*ease | grep "DISTRIB_RELEASE" | awk -F "=" '{print $2}')
         wget https://mega.nz/linux/repo/xUbuntu_${megacmd_ver}/amd64/megacmd-xUbuntu_${megacmd_ver}_amd64.deb && sudo apt install "$PWD/megacmd-xUbuntu_${megacmd_ver}_amd64.deb"
         sudo timedatectl set-timezone "$TZ"
