--- a/.github/workflows/extract-img.yml
+++ b/.github/workflows/extract-img.yml
@@ -45,7 +45,7 @@ jobs:
       run: |
         sudo -E apt-get -qq update
         sudo -E apt-get -y install wget python3 rust
-        sudo -E rust install mediafire_rs
+        sudo -E cargo install mediafire_rs
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
         pip3 install gdown
