--- a/.github/workflows/extract-img.yml
+++ b/.github/workflows/extract-img.yml
@@ -44,7 +44,7 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
         sudo -E apt-get -qq update
-        sudo -E apt-get -y install wget python3 rust
+        sudo -E apt-get -y install wget python3 rustup
         sudo -E cargo install mediafire_rs
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
