--- a/.github/workflows/extract-img.yml
+++ b/.github/workflows/extract-img.yml
@@ -48,6 +48,8 @@ jobs:
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
         pip3 install gdown
+        wget https://raw.githubusercontent.com/NicKoehler/mediafire_bulk_downloader/refs/heads/master/requirements.txt
+        pip3 install -r requirements.txt
         pip3 install git+https://github.com/NicKoehler/mediafire_bulk_downloader.git
         megacmd_ver=$(sudo cat /etc/*ease | grep "DISTRIB_RELEASE" | awk -F "=" '{print $2}')
         wget https://mega.nz/linux/repo/xUbuntu_${megacmd_ver}/amd64/megacmd-xUbuntu_${megacmd_ver}_amd64.deb && sudo apt install "$PWD/megacmd-xUbuntu_${megacmd_ver}_amd64.deb"
