--- a/.github/workflows/extract-img.yml
+++ b/.github/workflows/extract-img.yml
@@ -44,13 +44,13 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
         sudo -E apt-get -qq update
-        sudo -E apt-get -y install wget python3
+        sudo -E apt-get -y install wget python3 git
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
         pip3 install gdown
-        wget https://raw.githubusercontent.com/NicKoehler/mediafire_bulk_downloader/refs/heads/master/requirements.txt
-        pip3 install -r requirements.txt
-        pip3 install git+https://github.com/NicKoehler/mediafire_bulk_downloader.git
+        git clone git clone https://github.com/NicKoehler/mediafire_bulk_downloader.git
+        (cd cd mediafire_bulk_downloader && python3 -m venv venv && source venv/bin/activate && pip3 install -r requirements.txt && python3 setup.py)
+        # pip3 install git+https://github.com/NicKoehler/mediafire_bulk_downloader.git
         megacmd_ver=$(sudo cat /etc/*ease | grep "DISTRIB_RELEASE" | awk -F "=" '{print $2}')
         wget https://mega.nz/linux/repo/xUbuntu_${megacmd_ver}/amd64/megacmd-xUbuntu_${megacmd_ver}_amd64.deb && sudo apt install "$PWD/megacmd-xUbuntu_${megacmd_ver}_amd64.deb"
         sudo timedatectl set-timezone "$TZ"
