--- a/.github/workflows/extract-img.yml
+++ b/.github/workflows/extract-img.yml
@@ -67,7 +67,7 @@ jobs:
           gdown ${link_gdrive} -O file.${{ inputs.type_file }}
         else
           if [ $(echo ${{ inputs.img_url }} | grep "mediafire.com") ]; then
-            mediafire ${{ inputs.img_url }}
+            mdrs ${{ inputs.img_url }}
             ls -l
           else
             if [ $(echo ${{ inputs.img_url }} | grep "mega.nz") ]; then
