--- a/.github/workflows/extract-img.yml
+++ b/.github/workflows/extract-img.yml
@@ -44,12 +44,11 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
         sudo -E apt-get -qq update
-        sudo -E apt-get -y install wget python3 rustup
+        sudo -E apt-get -y install wget python3
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
-        pip3 install gdown
-        cargo install mediafire_rs
-        # pip3 install git+https://github.com/NicKoehler/mediafire_bulk_downloader.git
+        sudo pip3 install gdown
+        sudo pip3 install git+https://github.com/Juvenal-Yescas/mediafire-dl
         megacmd_ver=$(sudo cat /etc/*ease | grep "DISTRIB_RELEASE" | awk -F "=" '{print $2}')
         wget https://mega.nz/linux/repo/xUbuntu_${megacmd_ver}/amd64/megacmd-xUbuntu_${megacmd_ver}_amd64.deb && sudo apt install "$PWD/megacmd-xUbuntu_${megacmd_ver}_amd64.deb"
         sudo timedatectl set-timezone "$TZ"
@@ -66,12 +65,11 @@ jobs:
           gdown ${link_gdrive} -O file.${{ inputs.type_file }}
         else
           if [ $(echo ${{ inputs.img_url }} | grep "mediafire.com") ]; then
-            mdrs ${{ inputs.img_url }}
-            ls -l
+            mediafire-dl ${{ inputs.img_url }} -o file.${{ inputs.type_file }}
           else
             if [ $(echo ${{ inputs.img_url }} | grep "mega.nz") ]; then
               file_mega=$(mega-get ${{ inputs.img_url }} | awk -F: '{print $2}')
-              ${file_mega} file.${{ inputs.type_file }}
+              mv ${file_mega} file.${{ inputs.type_file }}
             else
               wget --no-check-certificate ${{ inputs.img_url }} -O file.${{ inputs.type_file }}
             fi
