--- a/.github/workflows/extract-img.yml
+++ b/.github/workflows/extract-img.yml
@@ -90,11 +90,9 @@ jobs:
         elif [ ${{ inputs.type_file }} = "img.xz" ]; then
           unxz file.img.xz
         elif [ ${{ inputs.type_file }} = "img.tar.gz" ]; then
-          gunzip file.img.tar.gz
-          tar xf file.img.tar
+          tar xfz file.img.tar.gz
         elif [ ${{ inputs.type_file }} = "img.tar.xz" ]; then
-          unxz file.img.tar.xz
-          tar xf file.img.tar
+          tar xf file.img.tar.xz
         fi
         los=$(sudo losetup -fP --show file.img)
         sudo mount ${los}p1 boot
